--- a/docs/lib/sage-frontend/stylesheets/docs/_status_key.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_status_key.scss
@@ -26,12 +26,12 @@
     border-radius: $status-key-icon-size;
 
     &--done {
-      border-color: sage-color(sage);
-      background: sage-color(sage);
+      border-color: var(--pine-color-green-600);
+      background: var(--pine-color-green-600);
     }
 
     &--doing {
-      border-color: sage-color(orange);
+      border-color: var(--pine-color-mercury-300);
     }
 
     &--todo {
