--- a/packages/sage-assets/lib/stylesheets/components/_avatar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_avatar.scss
@@ -9,32 +9,32 @@ $-avatar-min-size: rem(32px);
 $-avatar-max-size: rem(128px);
 $-avatar-ring-colors: (
   charcoal: (
-    main: sage-color(grey, 950),
-    bg: sage-color(grey, 200)
+    main: var(--pine-color-grey-950),
+    bg: var(--pine-color-grey-200)
   ),
   grey: (
-    main: sage-color(grey, 950),
-    bg: sage-color(grey, 200)
+    main: var(--pine-color-grey-950),
+    bg: var(--pine-color-grey-200)
   ),
   purple: (
-    main: sage-color(purple, 600),
-    bg: sage-color(purple, 150)
+    main: var(--pine-color-purple-600),
+    bg: var(--pine-color-purple-150)
   ),
   sage: (
-    main: sage-color(sage, 300),
-    bg: sage-color(sage, 100)
+    main: var(--pine-color-green-600),
+    bg: var(--pine-color-green-150)
   ),
   yellow: (
-    main: sage-color(yellow, 400),
-    bg: sage-color(yellow, 150)
+    main: var(--pine-color-yellow-400),
+    bg: var(--pine-color-yellow-150)
   ),
   orange: (
-    main: sage-color(orange, 300),
-    bg: sage-color(orange, 100)
+    main: var(--pine-color-mercury-500),
+    bg: var(--pine-color-mercury-150)
   ),
   red: (
-    main: sage-color(red, 500),
-    bg: sage-color(red, 150)
+    main: var(--pine-color-red-500),
+    bg: var(--pine-color-red-150)
   )
 );
 $-avatar-tile-size: rem(216px);
@@ -63,17 +63,17 @@ $-avatar-group-item-sizes: (
   position: relative;
   width: $-avatar-min-size;
   height: $-avatar-min-size;
-  border-radius: sage-border(radius-round);
-  background-color: sage-color(primary, 100);
+  border-radius: var(--pine-border-radius-full);
+  background-color: var(--pine-color-mercury-050);
 
   // Documentation-specific styles
   .sage-avatar-wrapper > & {
-    margin-inline-end: sage-spacing();
+    margin-inline-end: var(--pine-dimension-300);
   }
 
   .sage-table td > & {
-    margin-block-start: -1 * sage-spacing(2xs);
-    margin-block-end: -1 * sage-spacing(2xs);
+    margin-block-start: calc(-1 * var(--pine-dimension-050));
+    margin-block-end: calc(-1 * var(--pine-dimension-050));
   }
 
   // Items inside avatar group should be 100% to start
@@ -133,11 +133,11 @@ $-avatar-group-item-sizes: (
 .sage-avatar-wrapper {
   display: flex;
   flex-wrap: wrap;
-  margin-block-end: sage-spacing();
+  margin-block-end: var(--pine-dimension-300);
 }
 
 .sage-avatar--tile {
-  padding: sage-spacing(md);
+  padding: var(--pine-dimension-300);
   border-radius: initial;
 
   @include avatar-scaling;
@@ -156,9 +156,9 @@ $-avatar-group-item-sizes: (
   z-index: sage-z-index(default, 3);
   inset-block-end: rem(-4px);
   inset-inline-end: rem(-4px);
-  background-color: sage-color(white);
-  border-radius: sage-border(radius-round);
-  border: rem(2px) solid sage-color(white);
+  background-color: var(--pine-color-white);
+  border-radius: var(--pine-border-radius-full);
+  border: rem(2px) solid var(--pine-color-white);
 
   &.sage-avatar__badge--custom-bg {
     background-color: var(--badge-custom-bg-color);
@@ -178,8 +178,8 @@ $-avatar-group-item-sizes: (
   grid-area: full;
   width: 100%;
   text-align: center;
-  color: sage-color(primary, 400);
-  fill: sage-color(primary, 400);
+  color: var(--pine-color-mercury-500);
+  fill: var(--pine-color-mercury-500);
 
   @extend %t-sage-body-xsmall-bold;
 
@@ -205,7 +205,7 @@ $-avatar-group-item-sizes: (
   grid-area: full;
   height: 100%;
   width: 100%;
-  border-radius: sage-border(radius-round);
+  border-radius: var(--pine-border-radius-full);
   object-fit: cover;
 
   .sage-avatar--tile & {
@@ -228,6 +228,6 @@ $-avatar-group-item-sizes: (
 
   // Documentation-specific styles
   .sage-avatar-wrapper & {
-    margin-inline-end: sage-spacing();
+    margin-inline-end: var(--pine-dimension-300);
   }
 }
