--- a/docs/app/views/application/_app_head_content.html.erb
+++ b/docs/app/views/application/_app_head_content.html.erb
@@ -17,5 +17,6 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon">
 <%= csrf_meta_tags %>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@pine-ds/core@[VERSION]/dist/pine-core/pine-core.css" />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@pine-ds/core@latest/dist/pine-core/pine-core.esm.js"></script>
 <script nomodule src="https://cdn.jsdelivr.net/npm/@pine-ds/core@latest/dist/pine-core/index.esm.js"></script>
