--- a/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
@@ -47,7 +47,7 @@ $-checkbox-focus-outline-color: var(--pine-color-focus-ring);
   .sage-panel-controls__bulk-actions > & {
     align-items: center;
     position: relative;
-    z-index: sage-z-index(default);
+    z-index: var(--pine-dimension-none);
     padding: var(--pine-dimension-xs) var(--pine-dimension-sm);
     border: 0;
 
@@ -72,12 +72,12 @@ $-checkbox-focus-outline-color: var(--pine-color-focus-ring);
     }
 
     &:hover {
-      z-index: sage-z-index(default, 1);
-      border-color: var(--pine-color-neutral-hover);
+      z-index: calc(var(--pine-dimension-none) + 1);
+      border-color: var(--pine-color-neutral-hover)
     }
 
     &:focus-within {
-      z-index: sage-z-index(default, 2);
+      z-index: calc(var(--pine-dimension-none) + 2);
       box-shadow: 0 0 0 2px var(--pine-color-text-accent-disabled);
     }
   }
@@ -151,8 +151,8 @@ $-checkbox-focus-outline-color: var(--pine-color-focus-ring);
   // focus outline
   &::before {
     transform: translate3d(-50%, -50%, 0) scale(0.94);
-    width: calc(100% + ($-checkbox-focus-outline-width * 1px + (var(--pine-dimension-2xs) * 0.75 * 2)));
-    height: calc(100% + ($-checkbox-focus-outline-width * 1px + (var(--pine-dimension-2xs) * 0.75 * 2)));
+    width: calc(100% + (#{$-checkbox-focus-outline-width}px + (var(--pine-dimension-2xs) * 0.75 * 2)));
+    height: calc(100% + (#{$-checkbox-focus-outline-width}px + (var(--pine-dimension-2xs) * 0.75 * 2)));
     border: ($-checkbox-focus-outline-width * 1px) solid $-checkbox-focus-outline-color;
     border-radius: $-checkbox-border-radius-outer;
     pointer-events: none;
@@ -181,6 +181,8 @@ $-checkbox-focus-outline-color: var(--pine-color-focus-ring);
       width: 12px;
       height: 12px;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' class='pdsicon'%3E%3Cpath fill='%23ffffff' d='M14.667 7.333H1.333c-.4 0-.666.267-.666.667s.266.667.666.667h13.334c.4 0 .666-.267.666-.667s-.266-.667-.666-.667Z'%3E%3C/path%3E%3C/svg%3E");
+      width: 12px;
+      height: 12px;
     }
   }
 
@@ -241,7 +243,6 @@ $-checkbox-focus-outline-color: var(--pine-color-focus-ring);
       box-shadow: none;
       opacity: 1;
 
-      /* stylelint-disable-next-line max-nesting-depth */
       &::after {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' class='pdsicon'%3E%3Cpath fill-rule='evenodd' fill='#{encodecolor($-checkbox-color-disabled-checked)}' d='M15.138 3.529c.26.26.26.682 0 .942l-8.667 8.667a.667.667 0 0 1-.942 0L.862 8.471a.667.667 0 0 1 .943-.942L6 11.724l8.195-8.195c.26-.26.683-.26.943 0Z'%3E%3C/path%3E%3C/svg%3E");
         opacity: 0.3;
@@ -259,7 +260,7 @@ $-checkbox-focus-outline-color: var(--pine-color-focus-ring);
     border-color: $-checkbox-color-error;
 
     &::after {
-      color: var(--pine-color-secondary);
+      color: var(--pine-color-secondary)
     }
 
     &:checked {
