style: add missing semicolon

--- a/packages/sage-assets/lib/stylesheets/components/_loader.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_loader.scss
@@ -135,7 +135,7 @@ $-loader-lower-opacity: 0.4;
   stroke-linecap: round;
   stroke-linejoin: round;
   stroke-miterlimit: 10;
-  stroke: var(--pine-color-success-hover)
+  stroke: var(--pine-color-success-hover);
 }
 
 .sage-loader__text {
