--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -5,11 +5,11 @@
 ////
 
 
-$-copy-text-border: 1px solid sage-color(grey, 300);
-$-copy-text-border-focus-color: sage-color(purple, 300);
-$-copy-text-border-hover-color: sage-color(grey, 500);
-$-copy-text-color: sage-color(grey, 900);
-$-copy-text-color-hover: sage-color(grey, 950);
+$-copy-text-border: var(--pine-border);
+$-copy-text-border-focus-color: var(--pine-color-focus-ring);
+$-copy-text-border-hover-color: var(--pine-color-border-hover);
+$-copy-text-color: var(--pine-color-text-secondary);
+$-copy-text-color-hover: var(--pine-color-text-secondary-hover);
 
 
 .sage-copy-text {
@@ -38,7 +38,8 @@ $-copy-text-color-hover: sage-color(grey, 950);
   @include sage-copy-text;
 
   width: 100%;
-  padding: sage-spacing(card);
+  padding: var(--pine-dimension-md);
+  border-radius: 10px;
 }
 
 .sage-copy-text-card--truncate-contents {
@@ -60,17 +61,22 @@ $-copy-text-color-hover: sage-color(grey, 950);
   flex-flow: row-reverse;
   align-items: center;
   max-width: 100%;
-  padding-inline-end: sage-spacing(2xs);
+  padding-inline-end: var(--pine-dimension-2xs);
+  border-radius: var(--pine-border-radius-full);
 
   &::before {
     @include sage-icon-base(copy, md, pine);
 
-    margin-inline-start: sage-spacing(sm);
+    margin-inline-start: var(--pine-dimension-sm);
     color: $-copy-text-color;
   }
 
   &::after {
     transform: translate3d(-50%, -50%, 0);
+  }
+
+  &:hover {
+    background-color: var(--pine-color-grey-200);
   }
 
   &:hover::before {
@@ -93,5 +99,6 @@ $-copy-text-color-hover: sage-color(grey, 950);
 
 .sage-copy-text--semibold,
 .sage-copy-text-card--semibold {
-  @extend %t-sage-body-semi;
+  font: var(--pine-typography-body-semi-bold);
+  letter-spacing: var(--pine-letter-spacing);
 }
