--- a/packages/sage-assets/lib/stylesheets/components/_tabs.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tabs.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
 
     @media (max-width: sage-breakpoint(sm-max)) {
-      margin-block-end: sage-spacing(sm);
+      margin-block-end: var(--pine-dimension-sm);
     }
 
     @media (min-width: sage-breakpoint(md-min)) {
@@ -35,10 +35,10 @@
 }
 
 .sage-tabs--with-background {
-  padding-block-start: sage-spacing(sm);
-  padding-inline-start: sage-spacing(xs);
-  padding-inline-end: sage-spacing(xs);
-  background-color: sage-color(grey, 200);
+  padding-block-start: var(--pine-dimension-sm);
+  padding-inline-start: var(--pine-dimension-xs);
+  padding-inline-end: var(--pine-dimension-xs);
+  background-color: var(--pine-color-border);
 }
 
 .sage-tabs--layout-stacked {
@@ -52,7 +52,7 @@
 .sage-tabs-divider,
 .sage-tabs-container > hr {
   margin: 0;
-  border-block-start: 1px solid sage-color(grey, 300);
+  border-block-start: var(--pine-border);
 }
 
 .sage-tabs-pane {
@@ -81,6 +81,6 @@
   position: relative;
 
   .sage-tab--active {
-    background-color: sage-color(white);
+    background-color: var(--pine-color-background-container);
   }
 }
