style: update loader tokens to pine (#2056)
* style: update tokens and success colors

* style: add missing semicolon

* style: revert z-index changes

* fix: adjust font weight of text

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_loader.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_loader.html.erb
@@ -37,10 +37,10 @@
 
   <%# Success/Complete SVG %>
   <% if component.type === "success" %>
-    <svg class="sage-loader__success" width="48" height="48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="21" fill="#0072EF"/><path fill-rule="evenodd" clip-rule="evenodd" d="M34.707 17.293a1 1 0 0 1 0 1.414l-13 13a1 1 0 0 1-1.414 0l-7-7a1 1 0 0 1 1.414-1.414L21 29.586l12.293-12.293a1 1 0 0 1 1.414 0Z" fill="#fff"/></svg>
+    <svg class="sage-loader__success" width="48" height="48" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="24" cy="24" r="21" fill="#6b62f2"/><path fill-rule="evenodd" clip-rule="evenodd" d="M34.707 17.293a1 1 0 0 1 0 1.414l-13 13a1 1 0 0 1-1.414 0l-7-7a1 1 0 0 1 1.414-1.414L21 29.586l12.293-12.293a1 1 0 0 1 1.414 0Z" fill="#fff"/></svg>
   <% end %>
   <% if component.text %>
-    <p class="sage-loader__text <%= SageClassnames::TYPE::BODY_SMALL %>"><%= component_description %></p>
+    <p class="sage-loader__text <%= SageClassnames::TYPE::BODY_SMALL_MED %>"><%= component_description %></p>
   <% else %>
     <span class="visually-hidden"><%= component_description %></span>
   <% end %>
